# fastapi-zero

./: .gitignore  pyproject.toml
fastapi_zero/: __init__.py  app.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 2a426fdd3092_create_users_table.py  5a6b8369641e_add_updated_at_to_users.py  8264d3355cca_create_users_table.py  ed640c6b6d3f_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
